crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@mail_stop_check.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Return the unread mail count for stop-hook decisions without draining mail.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "all_namespaces": {
        "description": "Bypass namespace scoping and read across all namespaces.",
        "type": "boolean"
      },
      "namespace": {
        "description": "Namespace slug to scope this read. Overrides the caller session namespace fallback.",
        "type": "string"
      },
      "selector": {
        "description": "Inbox owner selector.",
        "type": "string"
      }
    },
    "required": [
      "selector"
    ],
    "type": "object"
  },
  "name": "mail_stop_check",
  "outputSchema": {
    "properties": {
      "counts": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "unread": {
        "type": "integer"
      }
    },
    "required": [
      "unread"
    ],
    "type": "object"
  }
}
