crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@namespace_list.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "List namespace records known to the session-matters daemon.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "slug": {
        "description": "Optional namespace slug to load instead of listing.",
        "type": "string"
      }
    },
    "type": "object"
  },
  "name": "namespace_list",
  "outputSchema": {
    "properties": {
      "namespaces": {
        "items": {
          "properties": {
            "created_at": {
              "format": "date-time",
              "type": "string"
            },
            "namespace": {
              "type": "string"
            }
          },
          "required": [
            "namespace",
            "created_at"
          ],
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "namespaces"
    ],
    "type": "object"
  }
}
