crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@nudge.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Send an ephemeral nudge to sessions selected by selector. Tmux-backed runtimes deliver through rtmd; headless or ended runtimes return typed failure messages.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "all_namespaces": {
        "description": "Bypass namespace scoping and read across all namespaces.",
        "type": "boolean"
      },
      "content": {
        "description": "Nudge content.",
        "type": "string"
      },
      "namespace": {
        "description": "Namespace slug to scope this read. Overrides the caller session namespace fallback.",
        "type": "string"
      },
      "to": {
        "description": "Recipient selector used for matching sessions.\n\nGrammar:\n  all\n  <uuid>\n  id:<uuid>\n  role:<name>\n  namespace:<slug>\n  dir:<path>\n  label:<key>=<value>\n  label:<key> in (v1, v2)\nExamples:\n  all\n  019e44f9-...\n  role:engineer\n  namespace:default\n  dir:/tmp/project\n  label:app=nginx\n  \"label:app in (web, api)\"",
        "type": "string"
      }
    },
    "required": [
      "to",
      "content"
    ],
    "type": "object"
  },
  "name": "nudge",
  "outputSchema": {
    "properties": {
      "errors": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "nudges": {
        "items": {
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "nudges",
      "errors"
    ],
    "type": "object"
  }
}
